# set-algebra-solver-py

./: .gitignore  README.md  pyproject.toml
docs/: FEATURES.md  INTENT_SPECULATION.md
src/: main.py
src/set_algebra_solver/: __init__.py  ast_nodes.py  cli.py  evaluator.py  identity.py  lexer.py  parser.py  relations.py  tokens.py
tests/: test_cli.py  test_evaluator.py  test_identity.py  test_lexer.py  test_parser.py  test_relations.py
